[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-privilege-reducer"
version = "0.1.0"
description = "OpenEnv: IAM Privilege Reducer for Cloud Security"
authors = [
    {name = "Pallavi Pesalavari"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
