[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-privilege-reducer"
version = "0.1.0"
description = "OpenEnv: IAM Privilege Reducer for Cloud Security"
authors = [
    {name = "PESALAVARI PALLAVI"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai>=2.7.2",
    "pydantic",
    "openenv-core==0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

# ✅ THIS IS REQUIRED (DO NOT MISS)
[project.scripts]
server = "server.app:main"
